增加预约功能的前台处理接口，以及后台管理。

--- a/WebContent/WEB-INF/jeecms_sys/frame/assistant_left.html
+++ b/WebContent/WEB-INF/jeecms_sys/frame/assistant_left.html
@@ -45,6 +45,7 @@ $(function(){
 		<@cms_perm url="/jobapply/v_list.do">
 		<li><a href="../jobapply/v_list.do" target="rightFrame"><@s.m "cmsJobApply.function"/></a></li>
 		</@cms_perm>
+		<li><a href="../booking/v_list.do" target="rightFrame">预约管理</a></li>
      </ul>
 </div>
 </body>
