--- a/WebContent/WEB-INF/jeecms_sys/booking/view.html
+++ b/WebContent/WEB-INF/jeecms_sys/booking/view.html
@@ -14,31 +14,16 @@
 	<div class="clear"></div>
 </div>
 <div class="body-box">
-<table width="100%" class="pn-ftable" cellpadding="2" cellspacing="1" border="0"><tr>
-<@p.td colspan="1" width="50">预约领导:</@p.td>
-<@p.td>[${booking.content.attr.position!}]${booking.content.title!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">预约日期:</@p.td>
-<@p.td>${booking.content.releaseDate?string("yyyy-MM-dd")}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">主题:</@p.td>
-<@p.td>${booking.title!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">内容:</@p.td>
-<@p.td>${booking.remark!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">姓名:</@p.td>
-<@p.td>${booking.realname!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">单位:</@p.td>
-<@p.td>${booking.company!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">邮箱:</@p.td>
-<@p.td>${booking.email!}</@p.td><@p.tr/>
-
-<@p.td colspan="1" width="50">电话:</@p.td>
-<@p.td>${booking.telphone!}</@p.td><@p.tr/>
-</table>
+<@p.form id="jvForm" action="v_list.do" labelWidth="12">
+<@p.td colspan="1" label="预约领导">[${booking.content.attr.position!}]${booking.content.attr.target!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="预约日期">${booking.content.attr.bookingdate!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="主题">${booking.title!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="内容">${booking.remark!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="预约人">${booking.realname!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="单位">${booking.company!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="邮箱">${booking.email!}</@p.td><@p.tr/>
+<@p.td colspan="1" label="电话">${booking.telphone!}</@p.td><@p.tr/>
+</@p.form>
 </div>
 </body>
 </html>
