--- a/WebContent/WEB-INF/t/cms/www/red/content/新闻内容.html
+++ b/WebContent/WEB-INF/t/cms/www/red/content/新闻内容.html
@@ -36,7 +36,7 @@ Cms.siteFlow("${base}", location.href, document.referrer);
         
         <div class="newsTex">
         	<h1>${content.title}</h1>
-            <div class="msgbar">发布时间： ${content.releaseDate} &nbsp; 作者：${content.author!'本站编辑'} &nbsp; 来源： ${content.origin!'本站原创'} &nbsp; 浏览次数：<span id="views"></span>
+            <div class="msgbar">发布时间： ${content.releaseDate} &nbsp; 作者：${content.author!'本站编辑'} &nbsp; 来源： ${content.origin!'本站原创'}
             [#if user??]
             <script type="text/javascript">
             $(function() {
