--- a/WebContent/WEB-INF/t/cms/www/red/content/视频内容.html
+++ b/WebContent/WEB-INF/t/cms/www/red/content/视频内容.html
@@ -27,23 +27,11 @@ Cms.siteFlow("${base}", location.href, document.referrer);
 	[#include "../include/页头顶栏.html"/]
     [#include "../include/标志和搜索.html"/]
     [#include "../include/页头导航栏.html"/]
-    <div class="website mt10">
-        当前位置：<a href="${base}/">首页</a> > [#list channel.nodeList as n]<a target="_blank" href="${n.url}">${n.name}</a>[#if n_has_next] > [/#if][/#list] > 正文
+    <div class="position">
+    <span>
+    当前位置：<a href="${base}/">首页</a> > [#list channel.nodeList as n]<a target="_blank" href="${n.url}">${n.name}</a>[#if n_has_next] > [/#if][/#list] > 正文</span>
+    <h1>[#if content.bold]<b>${content.title}</b>[#else]${content.title}[/#if]</h1>
     </div>
-    <div class="clear"></div>
-    <div class="newsTex">
-        <h1>[#if content.bold]<b>${content.title}</b>[#else]${content.title}[/#if]</h1>
-        <div class="msgbar">发布时间： ${content.releaseDate} &nbsp; 作者：${content.author!'本站编辑'} &nbsp; 来源： ${content.origin!'本站原创'} &nbsp; 浏览次数：<span id="views"></span>
-        [#if user??]
-        <script type="text/javascript">
-        $(function() {
-        Cms.collectexist("${base}","${content.id}","cancelSpan","comfirmSpan");
-        });
-        </script>
-        [/#if]
-        </div>
-    </div>
-    
     <div class="tvCon">
     	[#if content.mediaPath?? && content.mediaType??]
         <p style="margin: 5px auto; text-align: center">[#if content.mediaType=='FLV'] <object height="500" width="98%" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
