--- a/WebContent/WEB-INF/t/cms/www/red/special/留言板首页.html
+++ b/WebContent/WEB-INF/t/cms/www/red/special/留言板首页.html
@@ -35,7 +35,7 @@
                     <div class="lybTX">
                         [#if m.member?? && m.member.userImg??]
                         [#if m.member.userImg!=""]
-                        <img src="${guestbook.member.userImg!}"  height="50" width="50"/>
+                        <img src="${m.member.userImg!}"  height="50" width="50"/>
                         [#else]
                         <img src="/${res}/img/member/member-phtot.gif" height="50" width="50"/>
                         [/#if]
